Allow users enabling workaround for menus with some Mesa3D drivers. Define the env var BLENDER_FORCE_SWAPBUFFERS to enable (1, yes, oui, the value does not matter, code just checks for existence).

The issue seems to happen with Intel and Radeon, but enabling myswapbuffers()
hack solves it (or reduces to just flicker) for now.
https://bugs.freedesktop.org/show_bug.cgi?id=21774

Reported by Philippe Van Hecke.